# parsec-python

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: ci.yml  pathon-package.yml  python-package.yml  typecheck.yml  unittest.yml
examples/: calculator.py  json.py  lambda_parser.py  utlc.py  ΛCalc.py
parsec/: __init__.py  basic.py  combinator.py  context.py  core.py  err.py  error.py  parser.py  text.py  utils.py
parsec/text/: __init__.py  basic.py  context.py  lex.py  lexeme.py
src/: __init__.py  basic.py  parsec.py  text.py  typeclass.py  utils.py
tests/: __init__.py  test.py  test_basic.py
