[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]

[project]
name = "parsec-python"
dynamic = ["version"]
description = "A Monadic Parser Combinator for Python."
readme = "README.md"
requires-python = ">=3.13"
license = "LGPL-2.1"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/lunexnocty/parsec-python"
Issues = "https://github.com/lunexnocty/parsec-python/issues"

[[project.authors]]
name = "luminox"
email = "lunex_nocty@qq.com"

[tool.setuptools_scm]
write_to = "VERSION"

[tool.setuptools.packages.find]
where = ["."]
include = ["parsec.*"]
exclude = ["tests.*", "examples.*"]

[dependency-groups]
build = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
indent-size = 4
line-ending = "auto"
